[ALLI-6673] Fix current result set pager spacing in record view (#1805)

--- a/themes/finna2/less/finna/searchbox.less
+++ b/themes/finna2/less/finna/searchbox.less
@@ -28,6 +28,9 @@
       }
     }
   }
+  .search-tooltip:empty + .pager {
+    margin-left: 12px;
+  }
   .pager {
     @media (max-width: @screen-lg) {
       margin-left: 6px;
